--- a/side.html
+++ b/side.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script type="text/javascript" src="https://miro.com/app/static/sdk.1.1.js"></script>
-    <script type="text/javascript" src="/miro-plugin-deck/side.js"></script>
+    <script type="text/javascript" src="./side.js"></script>
     <style>
       body {
         height: 100vh;
@@ -20,7 +20,7 @@
         height: 82px;
       }
       .card img {
-        width: 100px;
+        width: 104px;
         height: 163px;
       }
       .Button {
